another fix collection commit - [active] -> [selected] in toolbar - fix files with quotes not opening - move EFileSorting from functions.js to index.js - prefix some globals with `window.` due to switching to ES modules - proper menu height - scrollbar always appearing in file list - show error on ExecuteCommand error - use CPath.Basename in CreateShortcut() - use CPathSelection in places I missed that in

--- a/src/ui/css/content/table.css
+++ b/src/ui/css/content/table.css
@@ -1,5 +1,5 @@
 #table-list-container {
-	height: 100%;
+	height: calc(100% - 17px);
 }
 
 #table-header {
